--- a/deploy/resources/knative-eventing-sources-v0.6.0.yaml
+++ b/deploy/resources/knative-eventing-sources-v0.6.0.yaml
@@ -18,11 +18,7 @@ rules:
 - apiGroups:
   - sources.eventing.knative.dev
   resources:
-  - awssqssources
-  - containersources
-  - cronjobsources
   - githubsources
-  - kuberneteseventsources
   verbs: &everything
   - get
   - list
@@ -32,22 +28,21 @@ rules:
   - patch
   - delete
 - apiGroups:
-  - sources.eventing.knative.dev
+    - sources.eventing.knative.dev
   resources:
-  - awssqssources/finalizers
-  - containersources/finalizers
-  - cronjobsources/finalizers
-  - githubsources/finalizers
-  - kuberneteseventsources/finalizers
+    - containersources
+    - containersources/status
+    - containersources/finalizers
   verbs: *everything
 - apiGroups:
   - sources.eventing.knative.dev
   resources:
-  - awssqssources/status
-  - containersources/status
-  - cronjobsources/status
+  - githubsources/finalizers
+  verbs: *everything
+- apiGroups:
+  - sources.eventing.knative.dev
+  resources:
   - githubsources/status
-  - kuberneteseventsources/status
   verbs:
   - get
   - update
@@ -58,15 +53,6 @@ rules:
   - deployments
   verbs: *everything
 - apiGroups:
-  - eventing.knative.dev
-  resources:
-  - channels
-  - brokers
-  verbs: &readOnly
-  - get
-  - list
-  - watch
-- apiGroups:
   - serving.knative.dev
   resources:
   - services
@@ -75,11 +61,19 @@ rules:
   - ""
   resources:
   - secrets
-  verbs: *readOnly
+  verbs:
+  - get
+  - list
+  - watch
 - apiGroups:
   - ""
   resources:
   - events
+  verbs: *everything
+- apiGroups:
+  - eventing.knative.dev
+  resources:
+  - eventtypes
   verbs: *everything
 ---
 apiVersion: rbac.authorization.k8s.io/v1
@@ -95,217 +89,18 @@ roleRef:
   kind: ClusterRole
   name: eventing-sources-controller
 ---
-apiVersion: apiextensions.k8s.io/v1beta1
-kind: CustomResourceDefinition
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRoleBinding
 metadata:
-  labels:
-    eventing.knative.dev/source: "true"
-    knative.dev/crd-install: "true"
-  name: awssqssources.sources.eventing.knative.dev
-spec:
-  group: sources.eventing.knative.dev
-  names:
-    categories:
-    - all
-    - knative
-    - eventing
-    - sources
-    kind: AwsSqsSource
-    plural: awssqssources
-  scope: Namespaced
-  subresources:
-    status: {}
-  validation:
-    openAPIV3Schema:
-      properties:
-        apiVersion:
-          type: string
-        kind:
-          type: string
-        metadata:
-          type: object
-        spec:
-          properties:
-            awsCredsSecret:
-              type: object
-            queueUrl:
-              type: string
-            serviceAccountName:
-              type: string
-            sink:
-              type: object
-          required:
-          - queueUrl
-          type: object
-        status:
-          properties:
-            conditions:
-              items:
-                properties:
-                  lastTransitionTime:
-                    type: string
-                  message:
-                    type: string
-                  reason:
-                    type: string
-                  severity:
-                    type: string
-                  status:
-                    type: string
-                  type:
-                    type: string
-                required:
-                - type
-                - status
-                type: object
-              type: array
-            sinkUri:
-              type: string
-          type: object
-  version: v1alpha1
----
-apiVersion: apiextensions.k8s.io/v1beta1
-kind: CustomResourceDefinition
-metadata:
-  labels:
-    eventing.knative.dev/source: "true"
-    knative.dev/crd-install: "true"
-  name: containersources.sources.eventing.knative.dev
-spec:
-  group: sources.eventing.knative.dev
-  names:
-    categories:
-    - all
-    - knative
-    - eventing
-    - sources
-    kind: ContainerSource
-    plural: containersources
-  scope: Namespaced
-  subresources:
-    status: {}
-  validation:
-    openAPIV3Schema:
-      properties:
-        apiVersion:
-          type: string
-        kind:
-          type: string
-        metadata:
-          type: object
-        spec:
-          properties:
-            args:
-              items:
-                type: string
-              type: array
-            env:
-              items:
-                type: object
-              type: array
-            image:
-              minLength: 1
-              type: string
-            serviceAccountName:
-              type: string
-            sink:
-              type: object
-          type: object
-        status:
-          properties:
-            conditions:
-              items:
-                properties:
-                  lastTransitionTime:
-                    type: string
-                  message:
-                    type: string
-                  reason:
-                    type: string
-                  severity:
-                    type: string
-                  status:
-                    type: string
-                  type:
-                    type: string
-                required:
-                - type
-                - status
-                type: object
-              type: array
-            sinkUri:
-              type: string
-          type: object
-  version: v1alpha1
----
-apiVersion: apiextensions.k8s.io/v1beta1
-kind: CustomResourceDefinition
-metadata:
-  labels:
-    eventing.knative.dev/source: "true"
-    knative.dev/crd-install: "true"
-  name: cronjobsources.sources.eventing.knative.dev
-spec:
-  group: sources.eventing.knative.dev
-  names:
-    categories:
-    - all
-    - knative
-    - eventing
-    - sources
-    kind: CronJobSource
-    plural: cronjobsources
-  scope: Namespaced
-  subresources:
-    status: {}
-  validation:
-    openAPIV3Schema:
-      properties:
-        apiVersion:
-          type: string
-        kind:
-          type: string
-        metadata:
-          type: object
-        spec:
-          properties:
-            data:
-              type: string
-            schedule:
-              type: string
-            serviceAccountName:
-              type: string
-            sink:
-              type: object
-          required:
-          - schedule
-          type: object
-        status:
-          properties:
-            conditions:
-              items:
-                properties:
-                  lastTransitionTime:
-                    type: string
-                  message:
-                    type: string
-                  reason:
-                    type: string
-                  severity:
-                    type: string
-                  status:
-                    type: string
-                  type:
-                    type: string
-                required:
-                - type
-                - status
-                type: object
-              type: array
-            sinkUri:
-              type: string
-          type: object
-  version: v1alpha1
+  name: eventing-sources-addressable-resolver 
+subjects:
+- kind: ServiceAccount
+  name: controller-manager
+  namespace: knative-sources
+roleRef:
+  apiGroup: rbac.authorization.k8s.io
+  kind: ClusterRole
+  name: addressable-resolver
 ---
 apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
@@ -346,6 +141,7 @@ spec:
             eventTypes:
               items:
                 enum:
+                - check_suite
                 - commit_comment
                 - create
                 - delete
@@ -427,75 +223,7 @@ spec:
             webhookIDKey:
               type: string
           type: object
-  version: v1alpha1
----
-apiVersion: apiextensions.k8s.io/v1beta1
-kind: CustomResourceDefinition
-metadata:
-  labels:
-    eventing.knative.dev/source: "true"
-    knative.dev/crd-install: "true"
-  name: kuberneteseventsources.sources.eventing.knative.dev
-spec:
-  group: sources.eventing.knative.dev
-  names:
-    categories:
-    - all
-    - knative
-    - eventing
-    - sources
-    kind: KubernetesEventSource
-    plural: kuberneteseventsources
-  scope: Namespaced
-  subresources:
-    status: {}
-  validation:
-    openAPIV3Schema:
-      properties:
-        apiVersion:
-          type: string
-        kind:
-          type: string
-        metadata:
-          type: object
-        spec:
-          properties:
-            namespace:
-              type: string
-            serviceAccountName:
-              type: string
-            sink:
-              type: object
-          required:
-          - namespace
-          type: object
-        status:
-          properties:
-            conditions:
-              items:
-                properties:
-                  lastTransitionTime:
-                    type: string
-                  message:
-                    type: string
-                  reason:
-                    type: string
-                  severity:
-                    type: string
-                  status:
-                    type: string
-                  type:
-                    type: string
-                required:
-                - type
-                - status
-                type: object
-              type: array
-            sinkUri:
-              type: string
-          type: object
-  version: v1alpha1
----
+  version: v1alpha1---
 apiVersion: v1
 kind: Service
 metadata:
@@ -527,19 +255,15 @@ spec:
     spec:
       serviceAccountName: controller-manager
       containers:
-      - image: quay.io/openshift-knative/knative-eventing-sources-manager:v0.5.0
+      - image: quay.io/openshift-knative/knative-eventing-sources-manager:v0.6.0
         name: manager
         env:
-        - name: K8S_RA_IMAGE
-          value: quay.io/openshift-knative/knative-eventing-sources-kuberneteseventsource:v0.5.0
         - name: GH_RA_IMAGE
-          value: quay.io/openshift-knative/knative-eventing-sources-github-receive-adapter:v0.5.0
-        - name: CRONJOB_RA_IMAGE
-          value: quay.io/openshift-knative/knative-eventing-sources-cronjob-receive-adapter:v0.5.0
+          value: quay.io/openshift-knative/knative-eventing-sources-github-receive-adapter:v0.6.0
         resources:
           requests:
             cpu: 100m
-            memory: 1000Mi
+            memory: 100Mi
           limits:
             cpu: 1000m
             memory: 1000Mi
@@ -574,6 +298,12 @@ rules:
   - patch
   - delete
 - apiGroups:
+  - rbac.authorization.k8s.io
+  resources:
+  - clusterroles
+  verbs:
+  - list
+- apiGroups:
   - ""
   resources:
   - events
@@ -607,23 +337,6 @@ rules:
   - update
   - patch
 - apiGroups:
-  - serving.knative.dev
-  resources:
-  - services
-  verbs:
-  - get
-  - list
-  - watch
-- apiGroups:
-  - eventing.knative.dev
-  resources:
-  - channels
-  - brokers
-  verbs:
-  - get
-  - list
-  - watch
-- apiGroups:
   - camel.apache.org
   resources:
   - '*'
@@ -648,6 +361,19 @@ subjects:
 - kind: ServiceAccount
   name: camel-controller-manager
   namespace: knative-sources
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRoleBinding
+metadata:
+  name: eventing-sources-camel-controller-addressable-resolver
+subjects:
+- kind: ServiceAccount
+  name: camel-controller-manager
+  namespace: knative-sources
+roleRef:
+  apiGroup: rbac.authorization.k8s.io
+  kind: ClusterRole
+  name: addressable-resolver
 ---
 apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
@@ -696,6 +422,60 @@ spec:
                     uri:
                       minLength: 1
                       type: string
+                    serviceAccountName:
+                      type: string
+                    context:
+                      type: string
+                  type: object
+                integration:
+                  properties:
+                    configuration:
+                      items:
+                        properties:
+                          type:
+                            type: string
+                          value:
+                            type: string
+                        required:
+                        - type
+                        - value
+                        type: object
+                      type: array
+                    context:
+                      type: string
+                    dependencies:
+                      items:
+                        type: string
+                      type: array
+                    profile:
+                      type: string
+                    replicas:
+                      format: int32
+                      type: integer
+                    repositories:
+                      items:
+                        type: string
+                      type: array
+                    resources:
+                      items:
+                        properties:
+                          mountPath:
+                            type: string
+                          type:
+                            type: string
+                        type: object
+                      type: array
+                    serviceAccountName:
+                      type: string
+                    sources:
+                      items:
+                        properties:
+                          language:
+                            type: string
+                        type: object
+                      type: array
+                    traits:
+                      type: object
                   type: object
               type: object
           required:
@@ -759,7 +539,7 @@ spec:
         control-plane: camel-controller-manager
     spec:
       containers:
-      - image: quay.io/openshift-knative/knative-eventing-sources-camel-source-controller:v0.5.0
+      - image: quay.io/openshift-knative/knative-eventing-sources-camel-source-controller:v0.6.0
         name: manager
         resources:
           limits:
@@ -787,7 +567,6 @@ rules:
   resources:
   - kafkasources
   - kafkasources/finalizers
-  - services
   verbs: &everything
   - get
   - list
@@ -800,7 +579,6 @@ rules:
   - sources.eventing.knative.dev
   resources:
   - kafkasources/status
-  - services
   verbs:
   - get
   - update
@@ -824,14 +602,7 @@ rules:
 - apiGroups:
   - eventing.knative.dev
   resources:
-  - channels
-  - services
-  verbs: *everything
-- apiGroups:
-  - serving.knative.dev
-  resources:
-  - services
-  - routes
+  - eventtypes
   verbs: *everything
 ---
 apiVersion: rbac.authorization.k8s.io/v1
@@ -846,6 +617,19 @@ roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
   name: eventing-sources-kafka-controller
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRoleBinding
+metadata:
+  name: eventing-sources-kafka-controller-addressable-resolver 
+subjects:
+- kind: ServiceAccount
+  name: kafka-controller-manager
+  namespace: knative-sources
+roleRef:
+  apiGroup: rbac.authorization.k8s.io
+  kind: ClusterRole
+  name: addressable-resolver
 ---
 apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
@@ -880,15 +664,60 @@ spec:
           properties:
             bootstrapServers:
               type: string
+              minLength: 1
             topics:
               type: string
+              minLength: 1
             consumerGroup:
               type: string
+              minLength: 1
+            net:
+              properties:
+                sasl:
+                  properties:
+                    enable:
+                      type: boolean
+                    password:
+                      properties:
+                        secretKeyRef:
+                          type: object
+                      type: object
+                    user:
+                      properties:
+                        secretKeyRef:
+                          type: object
+                      type: object
+                  type: object
+                tls:
+                  properties:
+                    caCert:
+                      properties:
+                        secretKeyRef:
+                          type: object
+                      type: object
+                    cert:
+                      properties:
+                        secretKeyRef:
+                          type: object
+                      type: object
+                    enable:
+                      type: boolean
+                    key:
+                      properties:
+                        secretKeyRef:
+                          type: object
+                      type: object
+                  type: object
+              type: object
             serviceAccountName:
               type: string
             sink:
               type: object
           type: object
+          required:
+              - bootstrapServers
+              - topics
+              - consumerGroup
         status:
           properties:
             conditions:
@@ -911,6 +740,9 @@ spec:
                 - status
                 type: object
               type: array
+            observedGeneration:
+              format: int64
+              type: integer
             sinkUri:
               type: string
           type: object
@@ -948,11 +780,10 @@ spec:
       serviceAccountName: kafka-controller-manager
       containers:
       - name: manager
-        image: quay.io/openshift-knative/knative-eventing-sources-kafka-source-controller:v0.5.0
-        imagePullPolicy: Always
+        image: quay.io/openshift-knative/knative-eventing-sources-kafka-source-controller:v0.6.0
         env:
         - name: KAFKA_RA_IMAGE
-          value: quay.io/openshift-knative/knative-eventing-sources-kafka-source-adapter:v0.5.0
+          value: quay.io/openshift-knative/knative-eventing-sources-kafka-source-adapter:v0.6.0
         volumeMounts:
         resources:
           limits:
